<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MemeGo</string>
    <string name="library_json">
        "[{\"title\":\"Lifecycle\",\"summary\":\"主要用于在软件工程的背景下，解决生命周期管理的一致性问题\",\"url\":\"https://xiaozhuanlan.com/topic/3684721950\"},{\"title\":\"LiveData\",\"summary\":\"主要用于配合 “唯一可信源” 实现消息的读写分离，从而确保消息分发的可靠一致，避免收到不可预期的推送或脏数据\",\"url\":\"https://xiaozhuanlan.com/topic/0168753249\"},{\"title\":\"ViewModel\",\"summary\":\"主要用于托管页面状态、分治视图控制器重建时的状态恢复，从而提升状态恢复的效率和节省不必要的流量、电量开销\",\"url\":\"https://xiaozhuanlan.com/topic/6257931840\"},{\"title\":\"DataBinding\",\"summary\":\"主要用于在软件工程的背景下，解决 “视图实例 null 安全” 的一致性问题\",\"url\":\"https://xiaozhuanlan.com/topic/9816742350\"},{\"title\":\"Navigation\",\"summary\":\"通过声明式编程来解决 “应用内路由导航” 和 “初值传参” 的一致性问题\",\"url\":\"https://xiaozhuanlan.com/topic/5860149732\"}]"
    </string>
    <string name="str_baby">baby</string>
    <string name="str_tg">Telegram</string>
    <string name="str_device_online">设备在线</string>
    <string name="str_sound_monitor">哭声检测</string>
    <string name="str_recent_time">最近时间</string>
    <string name="str_item_rate">心率 次/分</string>
    <string name="str_item_breathe">呼吸 次/分</string>
    <string name="str_item_weight">体重 kg</string>
    <string name="str_babytip_weight_">比较安静，心情舒畅</string>
    <string name="str_baby_tip">比较安静，心情舒畅\n建议多补充营养，外出呼吸新鲜空气</string>
    <string name="str_scene">场景</string>
    <string name="str_ti_helper">哭声安抚</string>
    <string name="str_create_scene">创建场景</string>
    <string name="str_product_buy">购买产品</string>
    <string name="str_wei_tip">喂奶提醒</string>
    <string name="str_health_record">健康记录</string>
    <string name="str_tt">Twitter</string>
    <string name="str_feedback">Feedback</string>
    <string name="str_upload">Upload</string>
    <string name="str_device_finding">正在设备搜索...</string>
    <string name="str_tip_pair">提示: 产品使用说明中,查看型号,匹配下\n列设备名。</string>
    <string name="str_action_connect">连接</string>
    <string name="str_action_connect_cancel">取消连接</string>
    <string name="string_dont_leave">请勿离开本应及页面</string>
    <string name="string_devoce_coming">设备正在连接中</string>
    <string name="string_devoce_bottom_tip">提示：\n 1. 请同意设备的蓝牙配对请求;\n 2. 请同意设备的接收消息通知请求。\n (手机上可能会有确认弹窗)</string>
    <string name="str_open">开关</string>
    <string name="str_open_url">Open</string>
    <string name="str_download">Download</string>
    <string name="str_shake">摇摆</string>
    <string name="str_music">音乐</string>
    <string name="str_light">小夜灯</string>
    <string name="str_starlight">星空灯</string>
    <string name="str_ambientlight">氛围灯</string>
    <string name="str_contral_dashboard">控制面板</string>
    <string name="str_fb">前后</string>
    <string name="str_left_right">左右</string>
    <string name="str_hd">混动</string>
    <string name="str_shake_type">摇摆类型</string>
    <string name="str_shake_speed">摇摆速度</string>
    <string name="str_save">保存</string>
    <string name="str_low">低</string>
    <string name="str_hight">高</string>
    <string name="str_middler">中</string>
    <string name="str_light_lever">亮度</string>
    <string name="str_effect_light">灯效</string>
    <string name="str_light_gradient">渐变</string>
    <string name="str_light_stream">流动</string>
    <string name="str_model_light">亮灯模式</string>
    <string name="str_model_feel">感应亮</string>
    <string name="str_light_long">长亮</string>
    <string name="str_light_close">关闭</string>
    <string name="str_model">模式</string>
    <string name="str_device_name">设备名称</string>
    <string name="str_setting_device">设置设备</string>
    <string name="str_unbind">解绑</string>
    <string name="str_upgrade">Upgrade Now</string>
    <string name="str_langauage_switch">设备语言切换</string>
    <string name="str_sel_baby">选择baby</string>
    <string name="str_chinese">中文</string>
    <string name="str_eng">English</string>
    <string name="str_baby_name">名字</string>
    <string name="str_baby_sex">性别</string>
    <string name="str_birthday">出生年月</string>
    <string name="str_man">男</string>
    <string name="str_woman">女</string>
    <string name="str_create_env">创建场景</string>
    <string name="str_env_name_tip">场景</string>
    <string name="str_create">创建</string>
    <string name="str_sel_device">选择设备</string>
    <string name="str_custome_list_tip">自定义列表</string>
    <string name="str_env_fastuse">设置场景名称以便快速使用</string>
    <string name="str_env_name">设置场景名称</string>
    <string name="str_name">名称</string>
    <string name="str_save_device_btn">保存设备</string>
    <string name="str_del_baby">确定删除baby吗?</string>
    <string name="str_del">删除</string>
    <string name="str_cancel">取消</string>
    <string name="str_add">添加</string>
    <string name="str_feed_tip">喂奶提醒</string>
    <string name="str_timer">时间</string>
    <string name="str_one">周一</string>
    <string name="str_two">周二</string>
    <string name="str_three">周三</string>
    <string name="str_four">周四</string>
    <string name="str_five">周五</string>
    <string name="str_only">只响一次</string>
    <string name="str_everyday">每天</string>
    <string name="str_one2five">周一到周五</string>
    <string name="str_more">more</string>
    <string name="str_exit_account">退出当前账号</string>
    <string name="str_account_safe">账号安全</string>
    <string name="str_about">关于我们</string>
    <string name="str_email">邮箱</string>
    <string name="str_modify_pwd">修改密码</string>
    <string name="str_cancel_account">注销账户</string>
    <string name="str_change_email">更换绑定邮箱吗？</string>
    <string name="str_change">更换</string>
    <string name="str_confirm_change_pwd">确定修改吗？</string>
    <string name="str_send_liink">修改密码链接通过邮箱发送</string>
    <string name="str_reset">恢复出场参数</string>
    <string name="str_app_name">酷豆丁 COOLBABY</string>
    <string name="str_factory_reset">确定恢复出厂设置吗?</string>
    <string name="str_cleaa_all">恢复后所有数据将清空</string>
    <string name="str_ok">确定</string>
    <string name="str_heart_rate">心率</string>
    <string name="str_day">日</string>
    <string name="str_week">周</string>
    <string name="str_month">月</string>
    <string name="str_year">年</string>
    <string name="str_cf">次/分</string>
    <string name="str_ave">平均</string>
    <string name="str_min_heart">最小心率</string>
    <string name="str_weight">体重</string>
    <string name="str_once_compare">一键校准</string>
    <string name="str_baby_warning">校准时请勿将baby放在称重计上</string>
    <string name="str_new">最新</string>
    <string name="str_once_normal">一键校准</string>
    <string name="str_weight_sub">校准时请勿将baby放在称重计上</string>
    <string name="str_meme_trending">#热门榜</string>
    <string name="str_meme_last">#实时排行榜</string>
    <string name="str_meme_base_data">统计数据</string>
    <string name="str_device">设备</string>
    <string name="str_today_hot_wallet">热门钱包</string>
    <string name="str_coin_hot">Hotapps</string>
    <string name="str_me">我的</string>
    <string name="str_asset">资产</string>
    <string name="str_breathe">呼吸</string>
    <string name="str_exchange">Trade</string>
    <string name="str_install">GET</string>
    <string name="str_home">首页</string>
    <string name="str_category">市场</string>
    <string name="str_quo">行情</string>
    <string name="str_ranking">交易</string>
    <string name="str_last_updatetime">Last Update Time 6 Hours Ago!!</string>
    <string name="str_markets">交易</string>
    <string name="str_wallet">钱包</string>
    <string name="str_wallet_tag">钱包 : </string>
    <string name="str_chance">机会</string>
    <string name="str_dex">Swap</string>
    <string name="str_chat">Chat</string>
    <string name="str_zx">自选</string>
    <string name="str_24ex">成交榜</string>
    <string name="str_24up">涨幅榜</string>
    <string name="str_24down">跌幅榜</string>
    <string name="str_other">Other</string>
    <string name="str_like">Like</string>
    <string name="str_acccount">Account</string>
    <string name="str_dex1">Go Swap</string>
    <string name="str_publish">publish</string>
    <string name="str_publish_tip">Publish</string>
    <string name="str_input_app_name">Input App English Name</string>
    <string name="str_input_app_subtitle">Input App Subtitle</string>
    <string name="str_input_dapp_name">Input DApp English Name</string>
    <string name="str_input_dapp_subtitle">Input DApp Subtitle</string>
    <string name="str_input_dapp_url">Input DApp Url</string>
    <string name="str_read_permission">Requires read file permission!</string>
    <string name="str_zero_m">0M</string>
    <string name="str_screen_x4">App Screenshot <font color='#f6a50c'> x4 </font></string>
    <string name="str_server_error">Unable to connect to server node</string>
    <string name="str_item_wallet">metamask,tp and trust.. </string>
    <string name="str_item_exchange">binance,gate.io and bitget.. </string>
    <string name="str_item_swap">uniswap,pancakeswap,apeswap.. </string>
    <string name="str_item_chat">telegram,twitter.. </string>
    <string name="str_item_scan">etherscan,bscscan..</string>
    <string name="str_item_analysis">parse data and monitor tools</string>
    <string name="str_item_news">PANews and other..</string>
    <string name="str_item_nft">OpenSea and LooksRary..</string>
    <string name="str_item_entertainment">games and other..</string>
    <string name="str_item_vpn">vpn and other..</string>
    <string name="str_item_dapp">dapp and other..</string>
    <string name="str_go_metastore">Please  Download Telegram!!</string>
    <string name="str_go_twitter">Please  Download Twitter!!</string>
    <string name="str_publish_success">Publish Success!</string>
    <string name="str_publish_fail">Publish Fail!</string>
    <string name="str_category_wallets">Wallets</string>
    <string name="str_category_exchanges">Exchanges</string>
    <string name="str_category_swaps">Swaps</string>
    <string name="str_category_entertrainments">EnterTrainments</string>
    <string name="str_category_chats">Chats</string>
    <string name="str_category_blockchain_browser">Blockchain Browser</string>
    <string name="str_category_at">Analysis Tools</string>
    <string name="str_category_news">News</string>
    <string name="str_category_nfts">Nfts</string>
    <string name="str_category_networks">Networks</string>
    <string name="str_category_dapps">Dapp</string>
    <string name="str_web">Web</string>
    <string name="str_input_search_key">Please input  search keywords...</string>
    <string name="str_overrview">overrview :</string>
    <string name="str_clear_all">Clear</string>
    <string name="str_recent_search">History</string>
    <string name="str_search">Search</string>
    <string name="str_input_key_tip">Please Input the key!!</string>
    <string name="str_download_tip">The download starts, please check the details in the notification bar!!</string>
    <string name="str_copy_tip">" Copied!"</string>
    <string name="str_share">Share</string>
    <string name="str_detail">Detail</string>
    <string name="str_notify">Notify</string>
    <string name="str_sale">PRESALE(私募)</string>
    <string name="str_download_request_fail">Download Request Fail!!</string>
    <string name="str_notice">MetaStore New Notice</string>
    <string name="str_mst_tm">MetaStore Team</string>
    <string name="str_i_know">I Know</string>
    <string name="app_update_background_downloading">Downloading new version in background…</string>
    <string name="str_not_tip">not tip(不再提示)</string>
    <string name="str_gui">Please open the VPN  翻译:使用该软件前请打开VPN翻墙软件.</string>
    <string name="str_bep_20"><u>BEP-20</u></string>
    <string name="str_token"><u>MST</u></string>
    <string name="str_min">单地址最低买入</string>
    <string name="str_max">单地址最高买入</string>
    <string name="str_presale_warning">注意:如果转账金额不在这个范围则后台不统计，且一个地址只能购买一次！！</string>
    <string name="str_pay">支付</string>
    <string name="str_address">地址</string>
    <string name="str_get_mst">获得代币</string>
    <string name="str_presale_list">参与列表:</string>
    <string name="str_10_meme">2 BTC 挖矿奖励</string>
</resources>