<?xml version="1.0" encoding="utf-8"?>
<com.hjq.shape.layout.ShapeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp15"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:shape_radius="30dp"
    app:shape_solidColor="@color/white"
    tools:ignore="MissingDefaultResource"
    android:gravity="center_horizontal"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_env_name"
        android:textColor="@color/c_333333"
        android:layout_marginTop="@dimen/dp44"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_env_fastuse"
        android:textColor="@color/c_666666"
        android:layout_marginTop="@dimen/dp10"

        />

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_marginTop="@dimen/dp40"
        android:padding="@dimen/dp8"
        android:hint="@string/str_name"
        android:background="@drawable/edit_background"

        />

    <com.hjq.shape.view.ShapeButton
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:text="@string/str_save"
        android:textColor="@color/c_cff32b"
        android:textSize="@dimen/dp20"
        android:gravity="center"
        app:shape_radius="@dimen/dp30"
        app:shape_solidColor="@color/c_d7f137"
        app:shape_textColor="@color/white"
        app:shape_solidPressedColor="@color/c_a0a0ab"
       android:layout_marginTop="@dimen/dp40"


        />

</com.hjq.shape.layout.ShapeLinearLayout>

