<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.zksg.kudoud.state.AccountSecurityViewModel" />

        <variable
            name="click"
            type="com.zksg.kudoud.activitys.AccountSecurityActivity.ClickProxy" />


    </data>

    <com.hjq.shape.layout.ShapeRelativeLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/dp15"
        android:background="@mipmap/ic_devicestate_bg"
       >



        <com.hjq.bar.TitleBar
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            app:barStyle="transparent"
            app:leftIcon="@mipmap/ic_left_back"
            app:title="@string/str_account_safe"
            app:titleColor="@color/c_333333"
            app:titleGravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:orientation="vertical"
            >
        <com.zksg.kudoud.widgets.SettingBar
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            app:bar_leftText="@string/str_email"
            app:bar_rightDrawable="@mipmap/ic_right_back"
            app:bar_leftTextColor="@color/c_666666"
            app:bar_leftTextSize="14sp"
            app:bar_rightText="956*****@qq.com"
            app:bar_lineVisible="false"
            android:background="@drawable/bg_settingbar"
            android:onClick="@{()->click.showChangePwd()}"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            />

            <com.zksg.kudoud.widgets.SettingBar
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                app:bar_leftText="@string/str_modify_pwd"
                app:bar_rightDrawable="@mipmap/ic_right_back"
                app:bar_leftTextColor="@color/c_666666"
                app:bar_leftTextSize="14sp"
                app:bar_lineVisible="false"
                android:background="@drawable/bg_settingbar"
                android:layout_marginTop="@dimen/dp20"
                android:onClick="@{()->click.showChangeEmail()}"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp15"
                />



        </LinearLayout>

        <com.hjq.shape.view.ShapeButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:text="@string/str_cancel_account"
            android:textColor="@color/c_cff32b"
            android:layout_gravity="right|top"
            android:textSize="16sp"
            android:gravity="center"
            app:shape_radius="@dimen/dp30"
            app:shape_solidColor="@color/white"
            app:shape_textColor="@color/c_666666"
            app:shape_solidPressedColor="@color/c_a0a0ab"
            android:layout_marginBottom="@dimen/dp15"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"

            />

    </com.hjq.shape.layout.ShapeRelativeLayout>



</layout>