<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.zksg.kudoud.state.CreateEnvViewModel" />

        <variable
            name="click"
            type="com.zksg.kudoud.activitys.CreateEnvActivity.ClickProxy" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:windowSoftInputMode="adjustPan"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp9"
        android:background="@mipmap/ic_devicestate_bg"
        android:orientation="vertical">

       <com.hjq.bar.TitleBar
           android:layout_width="match_parent"
           android:layout_height="@dimen/dp45"
           app:barStyle="transparent"
           app:leftIcon="@mipmap/ic_left_back"
           app:titleColor="@color/c_333333"
           app:titleGravity="center"
           app:title="@string/str_create_env"
           />

        <com.hjq.shape.layout.ShapeLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            app:shape_radius="@dimen/dp10"
            android:layout_marginTop="@dimen/dp20"
            app:shape_solidColor="@color/white"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_sel_device"
                    android:textSize="14sp"
                    android:textColor="@color/c_666666"
                    android:layout_marginTop="@dimen/dp16"
                    android:layout_marginLeft="@dimen/dp15"

                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp0.5"
                    android:background="@mipmap/ic_divider"
                    android:layout_marginTop="@dimen/dp16"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_devices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        />
                    <com.hjq.shape.view.ShapeImageView
                        android:id="@+id/add_device"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_baby_add"
                        android:onClick="@{()->click.selectDevice()}"

                        />
                </LinearLayout>

            </LinearLayout>



        </com.hjq.shape.layout.ShapeLinearLayout>

        <com.hjq.shape.layout.ShapeLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            app:shape_radius="@dimen/dp10"
            android:layout_marginTop="@dimen/dp20"
            app:shape_solidColor="@color/white"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_sel_baby"
                    android:textSize="14sp"
                    android:textColor="@color/c_666666"
                    android:layout_marginTop="@dimen/dp16"
                    android:layout_marginLeft="@dimen/dp15"

                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp0.5"
                    android:background="@mipmap/ic_divider"
                    android:layout_marginTop="@dimen/dp16"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/baby_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        />
                    <com.hjq.shape.view.ShapeImageView
                        android:id="@+id/add_baby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_baby_add"
                        android:onClick="@{()->click.selectBaby()}"

                        />
                </LinearLayout>

            </LinearLayout>



        </com.hjq.shape.layout.ShapeLinearLayout>


        <com.zksg.kudoud.widgets.SettingBar
            android:id="@+id/sb_baby_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp53"
            android:layout_marginTop="@dimen/dp50"
            android:background="@color/white"
            app:bar_leftText="@string/str_shake"
            app:bar_leftTextColor="@color/c_333333"
            app:bar_rightTextSize="14sp"
            app:bar_rightDrawable="@mipmap/ic_right_back"
            app:bar_lineVisible="false"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:onClick="@{()->click.startSettingShake()}"

            />


        <com.zksg.kudoud.widgets.SettingBar
            android:id="@+id/sb_baby_sex"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp53"
            android:background="@color/white"
            app:bar_leftText="@string/str_music"
            app:bar_leftTextColor="@color/c_333333"
            app:bar_rightTextSize="14sp"
            app:bar_rightDrawable="@mipmap/ic_right_back"
            app:bar_lineVisible="false"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:onClick="@{()->click.startSettingMusic()}"
            />


        <com.zksg.kudoud.widgets.SettingBar
            android:id="@+id/sb_baby_birthday"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp53"
            android:background="@color/white"
            app:bar_leftText="@string/str_light"
            app:bar_leftTextColor="@color/c_333333"
            app:bar_rightTextSize="14sp"
            app:bar_rightDrawable="@mipmap/ic_right_back"
            app:bar_lineVisible="false"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:onClick="@{()->click.startSettingSmallLight()}"
            />



        <com.zksg.kudoud.widgets.SettingBar
            android:id="@+id/sb_baby_weight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp53"
            android:background="@color/white"
            app:bar_leftText="@string/str_starlight"
            app:bar_leftTextColor="@color/c_333333"
            app:bar_rightTextSize="14sp"
            app:bar_rightDrawable="@mipmap/ic_right_back"
            app:bar_lineVisible="false"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:onClick="@{()->click.startSettingStarLight()}"
            />

        <com.zksg.kudoud.widgets.SettingBar
            android:id="@+id/sb_baby_high"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp53"
            android:background="@color/white"
            app:bar_leftText="@string/str_ambientlight"
            app:bar_leftTextColor="@color/c_333333"
            app:bar_rightTextSize="14sp"
            app:bar_rightDrawable="@mipmap/ic_right_back"
            app:bar_lineVisible="false"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:onClick="@{()->click.startSettingEnvLight()}"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            >

            <com.hjq.shape.view.ShapeButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:text="@string/str_create"
                app:shape_radius="@dimen/dp25"
                app:shape_solidColor="@color/white"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp15"
                android:layout_marginBottom="@dimen/dp25"
                android:onClick="@{()->click.create()}"

                />


        </LinearLayout>


    </LinearLayout>

</layout>